--- a/src/components/categoryDetails/categoryDetails.styles.css
+++ b/src/components/categoryDetails/categoryDetails.styles.css
@@ -1,5 +1,9 @@
-.portfolio-page {
+* {
     box-sizing: border-box;
+  }
+
+.portfolio-page {
+
 }
 
 .portfolio-page h2 {
@@ -25,14 +29,13 @@
     margin-top: 2em;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(auto-fit, 1fr);
+    
     grid-gap: 1rem;
-    box-sizing: border-box;
+    object-fit: cover;
+    /* box-sizing: border-box; */
 }
 
-/* .image-grid img {
-    border: 3px solid black;
-} */
+
 
 .flip-card {
     background-color: transparent;
@@ -83,3 +86,32 @@
     transform: rotateY(180deg);
   }
 
+
+.image {
+    max-width: 100%;
+    height: auto;
+  }
+
+
+@media screen and (max-width: 600px) {
+  .image-grid {
+  margin-top: 2em;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  align-items: center;
+ 
+  }
+
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .flip-card {
+    background-color: transparent;
+    width: 250px;
+    height: 250px;
+    perspective: 1000px;/* Remove this if you don't want the 3D effect */
+  }
+}
