--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -78,6 +78,7 @@
     font-family: 'Dosis', sans-serif;
     color: black;
     font-size: 150%;
+    text-align: center;
     text-transform: none;
     margin: 0 20px;
     animation: fadeIn normal 3s;
