--- a/src/components/portfolio/portfolio.styles.css
+++ b/src/components/portfolio/portfolio.styles.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Della+Respira&family=Dosis:wght@500&display=swap');
 
+* {
+    box-sizing: border-box;
+  }
 .carousel-container {
     margin: 20px auto;
     width: 70%;
