--- a/src/components/categoryDetails/categoryDetails.styles.css
+++ b/src/components/categoryDetails/categoryDetails.styles.css
@@ -1,6 +1,3 @@
-* {
-    box-sizing: border-box;
-  }
 
 .portfolio-page {
 
@@ -114,4 +111,10 @@
     height: 250px;
     perspective: 1000px;/* Remove this if you don't want the 3D effect */
   }
+
+  .blog-grid {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
 }
