fixed the animation on home page and image resizing done

--- a/src/components/categoryDetails/categoryDetails.styles.css
+++ b/src/components/categoryDetails/categoryDetails.styles.css
@@ -86,7 +86,7 @@
 
 .image {
     max-width: 100%;
-    height: auto;
+    max-height: 100%;
   }
 
 
@@ -116,5 +116,6 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    object-fit: cover;
 }
 }
