--- a/src/components/categories/categories.styles.css
+++ b/src/components/categories/categories.styles.css
@@ -19,3 +19,9 @@
     text-align: center;
     font-family: 'Della Respira', serif;
 }
+
+@media screen and (max-width: 600px) {
+    .categories{
+        height: 150px;
+    }
+}
