--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -54,7 +54,7 @@
     font-family: 'Della Respira', serif;
 }
   /* Animation */
-  h3 {
+ .introduction h3 {
     animation: animated-text 3s steps(30,end) 1s 1 normal both;
   }
   
