--- a/src/components/categories/categories.styles.css
+++ b/src/components/categories/categories.styles.css
@@ -22,6 +22,13 @@
 
 @media screen and (max-width: 600px) {
     .categories{
+        display: flex;
         height: 150px;
+        justify-content: center;
+        align-items: center;
     }
+
+    /* .categories h1 {
+        font-size: 25px;
+    } */
 }
